# MinecraftRust

./: AGENTS.md  Cargo.toml  README.md  STORAGE_BUG.md  client_debug.gdb  rust_out
crates/apkinfo/: Cargo.toml
crates/apkinfo/examples/: parse_apk.rs
crates/apkinfo/src/: lib.rs
crates/axml-parser/: Cargo.toml
crates/axml-parser/src/: lib.rs
crates/client/: CMakeLists.txt  Cargo.toml  build.rs
crates/client/include/libc-shim/: libc_shim.h
crates/client/include/libjnivm/jnivm/: hookManager.h  jnitypes.h  method.h  object.h  vm.h
crates/client/include/libjnivm/src/jnivm/: vm.cpp
crates/client/include/libjnivm/src/jnivm/internal/: method.cpp
crates/client/include/mcpelauncher/: linker.h
crates/client/src/: accounts_stub.cpp  arrays_stub.cpp  asset_manager_stub.cpp  capi.cpp  capi.rs  cert_manager_stub.cpp  cll_upload_auth_step_stub.cpp  core_patches_stub.cpp  fake_assetmanager_stub.cpp  fake_audio.cpp  fake_audio.h  fake_egl_stub.cpp  fake_inputqueue_stub.cpp  fake_looper.h  fake_looper.rs  fake_looper_stub.cpp  file_picker.rs  file_picker_stub.cpp  file_util.rs  fmod_stub.cpp  http_client_stubs.cpp  jbase64_stub.cpp  jni_bridge.cpp  jni_bridge_stub.cpp  jni_support.rs  jnivm_class_wrappers.cpp  jnivm_class_wrappers.rs  jnivm_globals.rs  linker_fwd.h  locale_stub.cpp  main.rs  main_activity.rs  main_stubs.cpp  package_source_stub.cpp  path_helper.rs  playfab_stub.cpp  rust_bridge.rs  securerandom_stub.cpp  settings_stub.cpp  shahasher_stub.cpp  (+9 more)
crates/client/src/eglut/: callbacks.rs  compat.rs  egl.rs  event.rs  mod.rs  mouse.rs  state.rs  util.rs  window.rs  xinput.rs
crates/client/src/jni/: audio.rs  ecdsa.h  http_client.rs  java_types.h  jni_descriptors.cpp  jni_support.cpp  jni_support.h  lib_http_client.cpp  lib_http_client_websocket.cpp  main_activity.cpp  main_activity.h  mod.rs  pulseaudio_stub.cpp  sdl3audio_stub.cpp  store.rs  uuid_stub.cpp  websocket.rs  xbox_live.cpp  xbox_live.rs
crates/client/src/manifest_headers/: fake_assetmanager.h  fake_egl.h  util.h  window_callbacks.h
crates/client/src/manifest_libs/logger/: log.cpp
crates/client/src/manifest_libs/simpleipc/common/encoding/: encoding_json.cpp  encoding_json_cbor.cpp
crates/client/src/mcpelauncher-core/include/mcpelauncher/: hybris_utils.h
crates/client/src/mcpelauncher-core/src/: hybris_utils.cpp  minecraft_utils.cpp
crates/client/src/mcpelauncher-linker/bionic/: dlfcn.cpp  linker.cpp
crates/client/src/mcpelauncher-linker/bionic/libc/include/: elf.h
crates/client/src/mcpelauncher-linker/bionic/linker/: linker.cpp  linker_soinfo.h
crates/client/src/mcpelauncher-linker/core/liblog/: logger.h
crates/client/src/mcpelauncher-linker/include/: compat.h
crates/client/src/mcpelauncher-linker/src/: linker.cpp
crates/cll-telemetry/: Cargo.toml
crates/cll-telemetry/src/: batch.rs  compressor.rs  config.rs  event.rs  lib.rs  manager.rs  serializer.rs  task.rs  uploader.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/cpp-bridge-sys/: Cargo.toml  build.rs
crates/daemon-utils/: Cargo.toml
crates/daemon-utils/src/: client.rs  daemon_launcher.rs  lib.rs  server.rs
crates/game-window/: Cargo.toml
crates/game-window/src/: gl_context.rs  input.rs  lib.rs  window.rs
crates/libc-shim/: Cargo.toml  build.rs
crates/libc-shim/src/: assert.rs  bionic_conv.rs  ctype.rs  data.rs  dir.rs  errno.rs  file.rs  lib.rs  locale.rs  memory.rs  misc.rs  mmap.rs  path_rewrite.rs  pthreads.rs  signal_.rs  socket.rs  stat.rs  stdio.rs  stdlib.rs  string.rs  time.rs  types.rs  unistd.rs  variadic.c
crates/libc-shim/tests/: integration_test.rs
crates/libjnivm-sys/: Cargo.toml  build.rs
crates/libjnivm-sys/cpp/: wrapper.cpp
crates/libjnivm-sys/src/: api.rs  build_native.rs  call_method.rs  call_nonvirtual.rs  call_static.rs  cast.rs  impl_arrays.rs  impl_basic.rs  impl_err.rs  impl_fields.rs  impl_frame.rs  impl_method.rs  impl_misc.rs  impl_new.rs  impl_object.rs  impl_refs.rs  impl_registry.rs  impl_strings.rs  jni_interface.rs  lib.rs  read_args.rs  state.rs  types.rs  vm.rs  vm_funcs.rs
crates/linker/: Cargo.toml
crates/linker/src/: base_strings.rs  block_allocator.rs  cfi.rs  debug.rs  dlwarning.rs  gdb_support.rs  lib.rs  libdl.rs  linker_config.rs  linker_main.rs  linker_stubs.rs  loader.rs  mapped_file_fragment.rs  namespaces.rs  phdr.rs  properties.rs  reloc.rs  reloc_iter.rs  relocate.rs  sdk_versions.rs  soinfo.rs  symbol.rs  tls.rs  utils.rs
crates/minecraft-imported-symbols/: Cargo.toml
crates/minecraft-imported-symbols/src/: lib.rs
crates/msa-daemon-client/: Cargo.toml
crates/msa-daemon-client/src/: client.rs  error.rs  launcher.rs  lib.rs  types.rs
crates/simple-ipc/: Cargo.toml
crates/simple-ipc/src/: client.rs  encoding.rs  lib.rs  message.rs  server.rs  varint.rs
crates/util/: Cargo.toml
crates/util/src/: arg_parser.rs  base64.rs  file_util.rs  lib.rs  logger.rs  properties.rs
docs/: ARCHITECTURE.md  CXX_BRIDGE.md  JNI_VM.md  LINKER_PORTING_PROGRESS.md  PORTING_PROGRESS.md  STARTUP_FLOW.md  STATIC_LIBS.md  XSAPI_SIGSEGV_FIX.md
