[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

linker = { path = "../linker" }
libc-shim = { path = "../libc-shim" }
game-window = { path = "../game-window" }
util = { path = "../util" }
apkinfo = { path = "../apkinfo" }
libjnivm-sys = { path = "../libjnivm-sys" }
x11 = "2.21"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
cc = "1"
