[package]
name = "cll-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
log = "0.4"
thiserror = "1"
bitflags = "2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
